# StrataCache

./: .gitignore  README.md  config.yaml  pyproject.toml
docs/: DESIGN.md  IMPLEMENTATION_LOG.md
src/stratacache/: __init__.py  config.py  config.yaml
src/stratacache.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/stratacache/adapters/: __init__.py
src/stratacache/adapters/torch/: __init__.py  parameter_client.py
src/stratacache/adapters/vllm/: README.md  (+2 more)
src/stratacache/backend/: __init__.py  base.py  cpu_store.py
src/stratacache/core/: __init__.py  artifact.py  errors.py  key_builder.py  keycodec.py  lsm_key.py  record_codec.py
src/stratacache/engine/: __init__.py  storage_engine.py  types.py
src/stratacache/migration/: __init__.py  planner.py
src/stratacache/telementry/: README.md  exporters.py  telementry.py  utils.py
src/stratacache/telemetry/: README.md  exporters.py  metrics.py  telemetry.py  utils.py
src/stratacache/tiering/: __init__.py  chain.py  policy.py
src/stratacache/tools/: __init__.py  smoke.py
src/stratacache/writeback/: __init__.py  manager.py
tests/: README.md  run_all.py  test_imports.py  test_key_builder.py  test_parameter_client_roundtrip.py  test_record_codec.py  test_stratacache_engine_api.py  test_tensor_codec_stable.py  test_tier_chain_write_back.py  test_tier_chain_write_through.py  test_vllm_connector_cache_roundtrip.py  test_vllm_connector_config_defaults.py  test_vllm_connector_tensor_io.py
tests/summary/: q1.sh  q2.sh  q3.sh  start.sh
tools/: run_vllm_with_stratacache.sh  vllm_token.py
(+14 files in other folders)
