[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stratacache"
version = "0.1.0"
description = "Standalone tiered artifact cache with CPU+CXL backends and write-through/write-back links."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "StrataCache Contributors" }]
dependencies = [
    "PyYAML>=6.0",
    "vllm==0.13.0",
    "sortedcontainers>=2.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"stratacache" = ["config.yaml"]
